IntelliJ warnings + migration aids resolved.